--- a/Week11_workspace/.dvc/config
+++ b/Week11_workspace/.dvc/config
@@ -1,6 +1,4 @@
 [core]
-    remote = 2019312297
-['remote "2018310522"']
-    url = gdrive://1tt980VT8IIjDhJlL5eNFI-U1H_GLN3lF
-['remote "2019312297"']
-    url = gdrive://1kp1M_LVtfPXkE6VUcPYKnefzHUmnOel2
+    remote = g-drive
+['remote "g-drive"']
+    url = gdrive://1r58Qa8s-Zx40Zr-Ac1nSEE-HNhlHm6pw
