--- a/src/config/model_config.yml
+++ b/src/config/model_config.yml
@@ -11,9 +11,11 @@ max_grad_norm: 1
 reg: 0.01
 lr: 2e-05
 num_epoch: 10
-train_batch_size: 2
+train_batch_size: 3
 valid_batch_size: 3
 in_batch: False
+scheduler_type: warmuplinear
+early_stop: 3
 ---
 # DPR
 model_name: DPR
@@ -24,3 +26,6 @@ lr: 2e-05
 num_epoch: 10
 train_batch_size: 2
 valid_batch_size: 3
+in_batch: False
+scheduler_type: warmuplinear
+early_stop: 3
