[동철] 학습 loss 추가, best_model만 저장(mrr3 기준), 실험 설명 desc 추가

--- a/src/config/main_config_CrossEncoder.yml
+++ b/src/config/main_config_CrossEncoder.yml
@@ -1,16 +1,16 @@
 first_model: BM25
 second_model: CrossEncoder
 ## for making DATASET
-train_neg_num: 4
+train_neg_num: 1
 test_neg_num: 4
 valid_neg_num: 8
 
 # train
-in-batch-neg: True
-# total_docs_per_query: 2 
-train_batch_size: 3
-valid_batch_size: 3
+# in-batch-neg: True
+# # total_docs_per_query: 2 
+# train_batch_size: 3
+# valid_batch_size: 3
 
 
-# Test (Ranking)
-test_batch_size: 3
+# # Test (Ranking)
+# test_batch_size: 3
